# dvsim

./: .envrc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  REUSE.toml  Scheduler.py  flake.nix  pyproject.toml  ruff-ci.toml
.github/: pull_request_template.md
.github/actions/: lowrisc_ci_app_get_token.yml
.github/workflows/: ci.yml  release.yml
doc/: releasing.md  testplanner.md
scripts/: ascentlint-report-parser.py  license_check.py  lint_commits.py  meridianrdc-report-parser.py  veriblelint-report-parser.py  verilator-report-parser.py
src/dvsim/: CdcCfg.py  CfgFactory.py  CfgJson.py  Deploy.py  FlowCfg.py  FormalCfg.py  Launcher.py  LauncherFactory.py  LintCfg.py  LocalLauncher.py  LsfLauncher.py  MsgBuckets.py  NcLauncher.py  OneShotCfg.py  README.md  RdcCfg.py  Regression.py  SGE.py  Scheduler.py  SgeLauncher.py  SimCfg.py  SimResults.py  SlurmLauncher.py  SynCfg.py  Test.py  Testplan.py  cli.py  cli_run.py  logging.py  modes.py  msg_bucket.py  msg_buckets.py  project.py  qsubopts.py  regression.py  results_server.py  scheduler.py  sim_results.py  sim_utils.py  test.py  (+2 more)
src/dvsim/check/: __init__.py  flow.py
src/dvsim/cli/: __init__.py  admin.py  main.py  run.py
src/dvsim/config/: __init__.py  errors.py  load.py  project.py  store.py
src/dvsim/doc/: design_doc.md  glossary.md
src/dvsim/flow/: base.py  cdc.py  factory.py  formal.py  lint.py  one_shot.py  rdc.py  sim.py  syn.py
src/dvsim/instrumentation/: __init__.py  base.py  compute.py  factory.py  metadata.py  records.py  resources.py  runtime.py  timing.py
src/dvsim/job/: __init__.py  data.py  deploy.py  status.py  time.py
src/dvsim/launcher/: base.py  factory.py  fake.py  local.py  lsf.py  nc.py  slurm.py
src/dvsim/linting/: config.py  data.py  flow.py  job.py  lint.py  parser.py  report.py
src/dvsim/report/: __init__.py  artifacts.py  data.py  generate.py  index.py  repo.py
src/dvsim/runtime/: __init__.py  backend.py  data.py  fake.py  legacy.py  local.py  registry.py
src/dvsim/scheduler/: __init__.py  async_status_printer.py  core.py  log_manager.py  resources.py  runner.py  status_printer.py
src/dvsim/sim/: dashboard.py  data.py  flow.py  report.py
src/dvsim/templates/: __init__.py  render.py
src/dvsim/tool/: ascentlint.py  utils.py  (+4 more)
tests/: __init__.py  test_project.py  test_runtime.py  test_scheduler.py
tests/check/: __init__.py  test_flow.py
tests/config/: __init__.py  test_load.py  test_store.py
tests/flow/: __init__.py  test_lint_parser.py
tests/job/: __init__.py  test_deploy.py  test_status.py  test_time.py
tests/linting/: __init__.py  test_lint.py
tests/report/: __init__.py  test_artifacts.py  test_index.py
tests/tool/: test_vcs.py
tests/utils/: __init__.py  test_fs.py  test_git.py  test_rclone.py  test_wildcards.py
(+57 files in other folders)
